# rk2

./: BorderDecorator.h  CMakeLists.txt  LICENSE  ScrollBarDecorator.cpp  ScrollBarDecorator.h  main.cpp  test_FancyWindow.cpp  test_Window.cpp
.github/workflows/: main.yml
src/core/: IWindow.h  Window.cpp  Window.h
src/decorators/: BorderDecorator.cpp  Decorator.cpp  Decorator.h
src/windows/: FancyWindow.cpp  FancyWindow.h
tests/: CMakeLists.txt  test_BorderDecorator.cpp  test_FancyWindow.cpp  test_ScrollBarDecorator.cpp  test_Window.cpp
